# straw

./: .gitignore  CONTRIBUTING.md  Jamroot  README.md  main.cpp  straw-R.cpp  straw-python.cpp  straw.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
C++/: CMakeLists.txt  README.md  helpfulstuff.txt  hic_slice.cpp  hic_slice.h  main.cpp  stout  straw.cpp  straw.h  straw.py  straw.sublime-workspace  test.sh  test2.sh  url_fopen  url_fopen.c  url_fopen.cpp
C++/fopen stuff (may be messign with code by being dubplicates?)/: fopen2.cpp  url_fopen.cpp  url_fopen.h
C++/slice_reader/: hic_slice_reader.cpp  hic_slice_reader.h  slice_reader_example.cpp
MATLAB/: README.md
R/: .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.md  straw-R.cpp
R/R/: RcppExports.R  strawr.R
R/inst/extdata/: test.hic
R/man/: readHicBpResolutions.Rd  readHicChroms.Rd  readHicNormTypes.Rd  straw.Rd  straw_R.Rd  strawr.Rd
R/src/: Makevars  Makevars.ucrt  RcppExports.cpp  straw-R.cpp  straw.cpp
pybind11_python/: MANIFEST.in  README.md  setup.py
pybind11_python/src/: straw.cpp  straw.h  straw_tools.py
python/: LICENSE  README.md  diff.py  get_matrix_start.py  juicerstraw.py  main-python.cpp  read_hic_header.py  setup.py  straw.cpp  straw.h  straw.py  straw_notebook.ipynb  straw_python.py  synapse.py  test.py
python/old/: Jamroot  straw.py
python/straw/: __init__.py  straw.py
